--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome!</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="images/icon.jpg" type="image/x-icon">
+    <link rel="icon" href="images/icon.jpg" type="image/jpg">
 
 </head>
 <body>
